; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/wiiuse/extr_ir.c_ir_convert_to_vres.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/wiiuse/extr_ir.c_ir_convert_to_vres.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@WIIUSE_ASPECT_16_9 = common dso_local global i32 0, align 4
@WM_ASPECT_16_9_X = common dso_local global i32 0, align 4
@WM_ASPECT_16_9_Y = common dso_local global i32 0, align 4
@WM_ASPECT_4_3_X = common dso_local global i32 0, align 4
@WM_ASPECT_4_3_Y = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (float*, float*, i32, i32, i32)* @ir_convert_to_vres to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ir_convert_to_vres(float* %0, float* %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca float*, align 8
  %7 = alloca float*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store float* %0, float** %6, align 8
  store float* %1, float** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %13 = load i32, i32* %8, align 4
  %14 = load i32, i32* @WIIUSE_ASPECT_16_9, align 4
  %15 = icmp eq i32 %13, %14
  br i1 %15, label %16, label %19

16:                                               ; preds = %5
  %17 = load i32, i32* @WM_ASPECT_16_9_X, align 4
  store i32 %17, i32* %11, align 4
  %18 = load i32, i32* @WM_ASPECT_16_9_Y, align 4
  store i32 %18, i32* %12, align 4
  br label %22

19:                                               ; preds = %5
  %20 = load i32, i32* @WM_ASPECT_4_3_X, align 4
  store i32 %20, i32* %11, align 4
  %21 = load i32, i32* @WM_ASPECT_4_3_Y, align 4
  store i32 %21, i32* %12, align 4
  br label %22

22:                                               ; preds = %19, %16
  %23 = load i32, i32* %11, align 4
  %24 = sub nsw i32 1024, %23
  %25 = sdiv i32 %24, 2
  %26 = sitofp i32 %25 to float
  %27 = load float*, float** %6, align 8
  %28 = load float, float* %27, align 4
  %29 = fsub float %28, %26
  store float %29, float* %27, align 4
  %30 = load i32, i32* %12, align 4
  %31 = sub nsw i32 768, %30
  %32 = sdiv i32 %31, 2
  %33 = sitofp i32 %32 to float
  %34 = load float*, float** %7, align 8
  %35 = load float, float* %34, align 4
  %36 = fsub float %35, %33
  store float %36, float* %34, align 4
  %37 = load float*, float** %6, align 8
  %38 = load float, float* %37, align 4
  %39 = load i32, i32* %11, align 4
  %40 = sitofp i32 %39 to float
  %41 = fdiv float %38, %40
  %42 = load i32, i32* %9, align 4
  %43 = uitofp i32 %42 to float
  %44 = fmul float %41, %43
  %45 = load float*, float** %6, align 8
  store float %44, float* %45, align 4
  %46 = load float*, float** %7, align 8
  %47 = load float, float* %46, align 4
  %48 = load i32, i32* %12, align 4
  %49 = sitofp i32 %48 to float
  %50 = fdiv float %47, %49
  %51 = load i32, i32* %10, align 4
  %52 = uitofp i32 %51 to float
  %53 = fmul float %50, %52
  %54 = load float*, float** %7, align 8
  store float %53, float* %54, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
